Updated for new API

--- a/OpenAIPinecone.ipynb
+++ b/OpenAIPinecone.ipynb
@@ -2,45 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pinecone\n",
-    "pinecone.init(api_key=open(\"Pineconekey.txt\",\"r\").read(), environment=\"gcp-starter\")\n"
+    "import pandas as pd\n",
+    "#pinecone.init(api_key=open(\"Pineconekey.txt\",\"r\").read(), environment=\"gcp-starter\")\n",
+    "#pc = pinecone(api_key=open(\"Pineconekey.txt\",\"r\").read(), environment=\"gcp-starter\")   \n",
+    "import os\n",
+    "from pinecone import Pinecone, ServerlessSpec, PodSpec\n",
+    "\n",
+    "pc = Pinecone(api_key=open(\"Pineconekey.txt\",\"r\").read())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pinecone.delete_index(\"alice\")"
+    "pc.delete_index(\"alice\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['alice']\n"
+      "{'indexes': [{'dimension': 1536,\n",
+      "              'host': 'alice-a980bfb.svc.gcp-starter.pinecone.io',\n",
+      "              'metric': 'cosine',\n",
+      "              'name': 'alice',\n",
+      "              'spec': {'pod': {'environment': 'gcp-starter',\n",
+      "                               'pod_type': 'starter',\n",
+      "                               'pods': 1,\n",
+      "                               'replicas': 1,\n",
+      "                               'shards': 1}},\n",
+      "              'status': {'ready': True, 'state': 'Ready'}}]}\n"
      ]
     }
    ],
    "source": [
-    "pinecone.create_index(\"alice\", dimension=1536, metric=\"cosine\")\n",
-    "index = pinecone.Index(\"alice\")\n",
-    "print(pinecone.list_indexes())"
+    "pc.create_index(\n",
+    "  name=\"alice\",\n",
+    "  dimension=1536,\n",
+    "  metric=\"cosine\",\n",
+    "  spec=PodSpec(\n",
+    "    environment=\"gcp-starter\",\n",
+    "    pod_type=\"starter\",\n",
+    "    pods=1\n",
+    "  ))\n",
+    "\n",
+    "index = pc.Index(\"alice\")\n",
+    "print(pc.list_indexes())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +131,7 @@
        "4  4  [0.0011981818825006485, -0.009525999426841736,..."
       ]
      },
-     "execution_count": 81,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "feb4f8ac695147efa52dddba5d4b799d",
+       "model_id": "fcff4209573b48efada823e82b1d705c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44b0af875cbc4fc3a09d3777904b83f4",
+       "model_id": "97f5a63edb3d4ab7b312abd70b1fba8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,7 +190,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a5cc0f2f9b746e1bb1a93abe3b7e6a5",
+       "model_id": "79f50f6b47314bdeae411e67eef10141",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,7 +207,7 @@
        "{'upserted_count': 15}"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -213,13 +237,13 @@
     "ready = False\n",
     "while not ready:\n",
     "    try:\n",
-    "        if pinecone.describe_index('alice')[7]['ready']:\n",
+    "        if pc.describe_index('alice')[\"status\"]['ready']:\n",
     "            ready = True\n",
     "            print('Index is ready!')\n",
     "        else:\n",
     "            print('Index is not ready yet...')\n",
     "            sleep(5)\n",
-    "    except pinecone.core.client.exceptions.NotFoundException:\n",
+    "    except pc.core.client.exceptions.NotFoundException:\n",
     "        # NotFoundException means the index is created yet.\n",
     "        pass\n",
     "        "
@@ -227,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +263,7 @@
        " 'total_vector_count': 814}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = pc.Index(\"alice\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -297,18 +330,19 @@
        " \"However, this bottle was NOT marked 'poison,' so Alice ventured to taste\\nit, and finding it very nice, (it had, in fact, a sort of mixed flavour\\nof cherry-tart, custard, pine-apple, roast turkey, toffee, and hot\\nbuttered toast,) she very soon finished it off.\"]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "searchdatabase('What can you eat in wonderland?', 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -329,28 +363,29 @@
        "             {'id': '408', 'score': 0.790407419, 'values': []},\n",
        "             {'id': '144', 'score': 0.790087283, 'values': []},\n",
        "             {'id': '16', 'score': 0.789170146, 'values': []}],\n",
-       " 'namespace': ''}"
+       " 'namespace': '',\n",
+       " 'usage': {'read_units': 5}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "    #Get the embedding of the searchterm\n",
-    "    import openai\n",
-    "    openai.api_type = \"azure\"\n",
-    "    openai.api_base = \"https://southcentralOpenAIral.openai.azure.com/\"\n",
-    "    openai.api_version = \"2022-12-01\"\n",
-    "    openai.api_key = open(\"AzurekeySCUS.txt\",\"r\").read()\n",
-    "    from openai.embeddings_utils import get_embedding, cosine_similarity\n",
-    "    query_embedding = get_embedding(\"WHat can you eat in wonderland?\",engine=\"textembeddingada002v2\")\n",
+    "#Get the embedding of the searchterm\n",
+    "import openai\n",
+    "openai.api_type = \"azure\"\n",
+    "openai.api_base = \"https://southcentralOpenAIral.openai.azure.com/\"\n",
+    "openai.api_version = \"2022-12-01\"\n",
+    "openai.api_key = open(\"AzurekeySCUS.txt\",\"r\").read()\n",
+    "from openai.embeddings_utils import get_embedding, cosine_similarity\n",
+    "query_embedding = get_embedding(\"WHat can you eat in wonderland?\",engine=\"textembeddingada002v2\")\n",
     "\n",
-    "    #query the database\n",
-    "    index.query(vector=query_embedding,\n",
-    "    top_k=15,\n",
-    "    include_values=False)"
+    "#query the database\n",
+    "index.query(vector=query_embedding,\n",
+    "top_k=15,\n",
+    "include_values=False)"
    ]
   }
  ],
@@ -370,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
