updated to latest versions of APIs and newest embeddings

--- a/OpenAIPinecone.ipynb
+++ b/OpenAIPinecone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'indexes': [{'dimension': 1536,\n",
+      "{'indexes': [{'dimension': 3072,\n",
       "              'host': 'alice-a980bfb.svc.gcp-starter.pinecone.io',\n",
       "              'metric': 'cosine',\n",
       "              'name': 'alice',\n",
@@ -50,7 +50,7 @@
    "source": [
     "pc.create_index(\n",
     "  name=\"alice\",\n",
-    "  dimension=1536,\n",
+    "  dimension=3072,\n",
     "  metric=\"cosine\",\n",
     "  spec=PodSpec(\n",
     "    environment=\"gcp-starter\",\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -96,27 +96,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>[-0.0009895042749121785, -0.003143131267279386...</td>\n",
+       "      <td>[0.025997638702392578, -0.025250762701034546, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>[-0.005550594534724951, -0.002100438578054309,...</td>\n",
+       "      <td>[0.004169656429439783, 0.016068601980805397, -...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>[-0.016373122110962868, -0.00787348672747612, ...</td>\n",
+       "      <td>[-0.01431865431368351, -0.005995984189212322, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>[-0.013116865418851376, -0.009315624833106995,...</td>\n",
+       "      <td>[0.03022223338484764, 0.04146571084856987, -0....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>[0.0011981818825006485, -0.009525999426841736,...</td>\n",
+       "      <td>[0.016702160239219666, 0.025803163647651672, -...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -124,14 +124,14 @@
       ],
       "text/plain": [
        "  id                                             values\n",
-       "0  0  [-0.0009895042749121785, -0.003143131267279386...\n",
-       "1  1  [-0.005550594534724951, -0.002100438578054309,...\n",
-       "2  2  [-0.016373122110962868, -0.00787348672747612, ...\n",
-       "3  3  [-0.013116865418851376, -0.009315624833106995,...\n",
-       "4  4  [0.0011981818825006485, -0.009525999426841736,..."
+       "0  0  [0.025997638702392578, -0.025250762701034546, ...\n",
+       "1  1  [0.004169656429439783, 0.016068601980805397, -...\n",
+       "2  2  [-0.01431865431368351, -0.005995984189212322, ...\n",
+       "3  3  [0.03022223338484764, 0.04146571084856987, -0....\n",
+       "4  4  [0.016702160239219666, 0.025803163647651672, -..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,18 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fcff4209573b48efada823e82b1d705c",
+       "model_id": "b084a34e2b8945e4ae450381976c6606",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "sending upsert requests:   0%|          | 0/400 [00:00<?, ?it/s]"
+       "sending upsert requests:   0%|          | 0/200 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -176,12 +176,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97f5a63edb3d4ab7b312abd70b1fba8a",
+       "model_id": "78fce11d69e4482a8822ea8343741bb6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "sending upsert requests:   0%|          | 0/399 [00:00<?, ?it/s]"
+       "sending upsert requests:   0%|          | 0/199 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -190,7 +190,35 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79f50f6b47314bdeae411e67eef10141",
+       "model_id": "f0eca79ec9354dbfbaf3a572b0a8cb8f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "sending upsert requests:   0%|          | 0/199 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee7e39aac080415d83601b022bb90253",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "sending upsert requests:   0%|          | 0/199 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "230198c009bd4542b4cf0677cc30f265",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,24 +231,41 @@
     },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ed02a24110a48ccbb355c460ccafee2",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "{'upserted_count': 15}"
+       "sending upsert requests: 0it [00:00, ?it/s]"
       ]
      },
-     "execution_count": 5,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'upserted_count': 0}"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "index.upsert_from_dataframe(dfvalues[0:400])\n",
-    "index.upsert_from_dataframe(dfvalues[401:800])\n",
-    "index.upsert_from_dataframe(dfvalues[801:1000])\n"
+    "index.upsert_from_dataframe(dfvalues[0:200])\n",
+    "index.upsert_from_dataframe(dfvalues[201:400])\n",
+    "index.upsert_from_dataframe(dfvalues[401:600])\n",
+    "index.upsert_from_dataframe(dfvalues[601:800])\n",
+    "index.upsert_from_dataframe(dfvalues[801:1000])\n",
+    "index.upsert_from_dataframe(dfvalues[1001:1200])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -251,19 +296,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'dimension': 1536,\n",
-       " 'index_fullness': 0.00814,\n",
-       " 'namespaces': {'': {'vector_count': 814}},\n",
-       " 'total_vector_count': 814}"
+       "{'dimension': 3072,\n",
+       " 'index_fullness': 0.00812,\n",
+       " 'namespaces': {'': {'vector_count': 812}},\n",
+       " 'total_vector_count': 812}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,11 +328,12 @@
     "    #Get the embedding of the searchterm\n",
     "    import openai\n",
     "    openai.api_type = \"azure\"\n",
-    "    openai.api_base = \"https://southcentralOpenAIral.openai.azure.com/\"\n",
+    "    openai.api_base = \"https://eastusOpenAIral.openai.azure.com/\"\n",
     "    openai.api_version = \"2022-12-01\"\n",
-    "    openai.api_key = open(\"AzurekeySCUS.txt\",\"r\").read()\n",
+    "    openai.api_key = open(\"AzurekeyEUS.txt\",\"r\").read()\n",
+    "\n",
     "    from openai.embeddings_utils import get_embedding, cosine_similarity\n",
-    "    query_embedding = get_embedding(searchterm,engine=\"textembeddingada002v2\")\n",
+    "    query_embedding = get_embedding(searchterm,engine=\"textembeddings3large\")\n",
     "\n",
     "    ##Get the IDs\n",
     "    xc = index.query(vector=query_embedding,\n",
@@ -308,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -325,18 +371,17 @@
       "text/plain": [
        "[\"'I've had nothing yet,' Alice replied in an offended tone, 'so I can't\\ntake more.'\",\n",
        " 'The Caterpillar and Alice looked at each other for some time in silence:\\nat last the Caterpillar took the hookah out of its mouth, and addressed\\nher in a languid, sleepy voice.',\n",
-       " \"Soon her eye fell on a little glass box that was lying under the table:\\nshe opened it, and found in it a very small cake, on which the words\\n'EAT ME' were beautifully marked in currants. 'Well, I'll eat it,' said\\nAlice, 'and if it makes me grow larger, I can reach the key; and if it\\nmakes me grow smaller, I can creep under the door; so either way I'll\\nget into the garden, and I don't care which happens!'\",\n",
-       " \"She ate a little bit, and said anxiously to herself, 'Which way? Which\\nway?', holding her hand on the top of her head to feel which way it was\\ngrowing, and she was quite surprised to find that she remained the same\\nsize: to be sure, this generally happens when one eats cake, but Alice\\nhad got so much into the way of expecting nothing but out-of-the-way\\nthings to happen, that it seemed quite dull and stupid for life to go on\\nin the common way.\",\n",
-       " \"However, this bottle was NOT marked 'poison,' so Alice ventured to taste\\nit, and finding it very nice, (it had, in fact, a sort of mixed flavour\\nof cherry-tart, custard, pine-apple, roast turkey, toffee, and hot\\nbuttered toast,) she very soon finished it off.\"]"
+       " 'On this the White Rabbit blew three blasts on the trumpet, and then\\nunrolled the parchment scroll, and read as follows:--',\n",
+       " \"However, this bottle was NOT marked 'poison,' so Alice ventured to taste\\nit, and finding it very nice, (it had, in fact, a sort of mixed flavour\\nof cherry-tart, custard, pine-apple, roast turkey, toffee, and hot\\nbuttered toast,) she very soon finished it off.\",\n",
+       " \"Soon her eye fell on a little glass box that was lying under the table:\\nshe opened it, and found in it a very small cake, on which the words\\n'EAT ME' were beautifully marked in currants. 'Well, I'll eat it,' said\\nAlice, 'and if it makes me grow larger, I can reach the key; and if it\\nmakes me grow smaller, I can creep under the door; so either way I'll\\nget into the garden, and I don't care which happens!'\"]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "searchdatabase('What can you eat in wonderland?', 5)"
    ]
   },
@@ -387,6 +432,13 @@
     "top_k=15,\n",
     "include_values=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
